Attiny85 don't supported yet.

--- a/README.textile
+++ b/README.textile
@@ -4,7 +4,7 @@ Library for Library to simplify working with avr-uart.
 
 Support:
 * ATMEGA328P
-* ATTINY85
+* -ATTINY85-
 
 Using:
 * Environment variable:
